--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://www.instagram.com/albaraa__adam/" target="__blank"
+        <a href="https://www.instagram.com/albaraa__adam/" target="_blank"
           >Albaraa Adam</a
         >.
       </div>
